--- a/deploy/charts/airlock-microgateway/tests/notes_test.yaml
+++ b/deploy/charts/airlock-microgateway/tests/notes_test.yaml
@@ -7,9 +7,9 @@ tests:
       appVersion: dev
     asserts: &latestDoc
       - matchRegexRaw:
-          pattern: ".*please visit our documentation at https://docs.airlock.com/microgateway/latest\\..*"
+          pattern: ".*Documentation: https://docs.airlock.com/microgateway/latest.*"
       - matchRegexRaw:
-          pattern: ".*API reference documentation is also available at https://docs.airlock.com/microgateway/latest/api/crds\\..*"
+          pattern: ".*CRD API reference documentation: https://docs.airlock.com/microgateway/latest/api/crds.*"
   - it: prerelease chart should describe latest doc links
     chart:
       appVersion: 4.2.0-ci
@@ -19,9 +19,9 @@ tests:
       appVersion: 4.2.4
     asserts:
       - matchRegexRaw:
-          pattern: ".*please visit our documentation at https://docs.airlock.com/microgateway/4.2\\..*"
+          pattern: ".*Documentation: https://docs.airlock.com/microgateway/4.2.*"
       - matchRegexRaw:
-          pattern: ".*API reference documentation is also available at https://docs.airlock.com/microgateway/4.2/api/crds\\..*"
+          pattern: ".*CRD API reference documentation: https://docs.airlock.com/microgateway/4.2/api/crds.*"
   - it: should fail if tests are enabled and release namespace is not part of the watch namespaces
     release:
       name: myoperator
