--- a/deploy/charts/airlock-microgateway/values.yaml
+++ b/deploy/charts/airlock-microgateway/values.yaml
@@ -26,10 +26,10 @@ operator:
     # -- Image repository from which to pull the Airlock Microgateway Operator image.
     repository: "quay.io/airlock/microgateway-operator"
     # -- Image tag to pull.
-    tag: "4.4.6"
+    tag: "4.4.7"
     # -- SHA256 image digest to pull (in the format "sha256:c79ee3f85862fb386e9dd62b901b607161d27807f512d7fbdece05e9ee3d7c63").
     # Overrides tag when specified.
-    digest: "sha256:8bf5c05e9b3092e7c994c0b6c2e63a557673ebfe61fb9c3a481385f59849f63b"
+    digest: "sha256:116a5ca9ca610355984b89996b1d313b6c8f1d047bf2e246f2b1e342512c3df1"
     # -- Pull policy for this image.
     pullPolicy: IfNotPresent
   # -- Annotations to add to all Pods.
@@ -116,10 +116,10 @@ engine:
     # -- Image repository from which to pull the Airlock Microgateway Engine image.
     repository: "quay.io/airlock/microgateway-engine"
     # -- Image tag to pull.
-    tag: "4.4.6"
+    tag: "4.4.7"
     # -- SHA256 image digest to pull (in the format "sha256:a3051f42d3013813b05f7513bb86ed6a3209cb3003f1bb2f7b72df249aa544d3").
     # Overrides tag when specified.
-    digest: "sha256:d95d3c67194d1e7d4b10a226de7b17856ca3d30217111353105048844f19b73c"
+    digest: "sha256:44bfbf3982c4af2e37784ec973bbdb597c6f83c9a76054f17f585fe4f04fcc4c"
     # -- Pull policy for this image.
     pullPolicy: IfNotPresent
   # -- Resource restrictions to apply to the Airlock Microgateway Engine container.
@@ -145,12 +145,12 @@ networkValidator:
   # Specifies the Airlock Microgateway Network Validator image to be injected as an init-container.
   image:
     # -- Image repository from which to pull the netcat image for the Airlock Microgateway Network Validator init-container.
-    repository: "cgr.dev/chainguard/netcat"
+    repository: "quay.io/airlock/netcat"
     # -- Image tag to pull.
     tag: ""
     # -- SHA256 image digest to pull (in the format "sha256:7ef657ce316ce9d86f90c1dc99702d1190877c6ac2e923e696dc82c30050a14c").
     # Overrides tag when specified.
-    digest: "sha256:7ef657ce316ce9d86f90c1dc99702d1190877c6ac2e923e696dc82c30050a14c"
+    digest: "sha256:a367fc04219830299a849084078f7a56ea879c5495e44052ee524ad54ded2830"
     # -- Pull policy for this image.
     pullPolicy: IfNotPresent
   # -- Resource restrictions to apply to the Airlock Microgateway Network Validator init-container.
@@ -167,10 +167,10 @@ sessionAgent:
     # -- Image repository from which to pull the Airlock Microgateway Session Agent image.
     repository: "quay.io/airlock/microgateway-session-agent"
     # -- Image tag to pull.
-    tag: "4.4.6"
+    tag: "4.4.7"
     # -- SHA256 image digest to pull (in the format "sha256:a3051f42d3013813b05f7513bb86ed6a3209cb3003f1bb2f7b72df249aa544d3").
     # Overrides tag when specified.
-    digest: "sha256:fcf840596f18e490e04cec609eded601f06cfa46e874c55386edefa9709f63be"
+    digest: "sha256:7fb0308619accc0dee3c876a8d14d09eada795da22dca30f77cb9a0c696ae75b"
     # -- Pull policy for this image.
     pullPolicy: IfNotPresent
   # -- Resource restrictions to apply to the Airlock Microgateway Session Agent container.
