--- a/deploy/bundles/airlock-microgateway/metadata/annotations.yaml
+++ b/deploy/bundles/airlock-microgateway/metadata/annotations.yaml
@@ -4,7 +4,7 @@ annotations:
   operators.operatorframework.io.bundle.manifests.v1: manifests/
   operators.operatorframework.io.bundle.metadata.v1: metadata/
   operators.operatorframework.io.bundle.package.v1: airlock-microgateway
-  operators.operatorframework.io.bundle.channels.v1: "4.5,stable"
+  operators.operatorframework.io.bundle.channels.v1: "4.5"
   operators.operatorframework.io.bundle.channel.default.v1: "4.5"
   operators.operatorframework.io.metrics.builder: operator-sdk-unknown
   operators.operatorframework.io.metrics.mediatype.v1: metrics+v1
